--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Attendance Automation
+application.title=Compulsary - Attendance Automation
 application.vendor=Axl
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
