--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javax.mail.jar=lib\\javax.mail.jar
-file.reference.jfoenix-1.10.0.jar=lib\\jfoenix-1.10.0.jar
 file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -40,8 +39,7 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.jfoenix-1.10.0.jar}
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
