--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ endorsed.classpath=
 excludes=
 file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.jfoenix.jar=lib\\jfoenix.jar
+file.reference.junit-4.12.jar=lib\\junit-4.12.jar
 file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -41,7 +42,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.jfoenix.jar}
+    ${file.reference.jfoenix.jar}:\
+    ${file.reference.junit-4.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
